# kmagick

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build-android.ps1  build-example.bat  build-kmagick.bat  build-win.ps1  build.gradle.kts  gen-jni.ps1  run-example.bat  settings.gradle.kts
.cargo/: config.toml
.github/: ISSUE_TEMPLATE.md
.github-deps/: generate-matrix.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml  update-main-release.yml
docs/: index.html  navigation.html
docs/kmagick/: package-list
docs/kmagick/com.cherryleafroad.kmagick/: find.html  index.html
docs/kmagick/com.cherryleafroad.kmagick/-align-type/: id.html  index.html
docs/kmagick/com.cherryleafroad.kmagick/-alpha-channel-option/: id.html  index.html
docs/kmagick/com.cherryleafroad.kmagick/-channel-type/: index.html
docs/kmagick/com.cherryleafroad.kmagick/-clip-path-units/: id.html  index.html
docs/kmagick/com.cherryleafroad.kmagick/-colorspace-type/: id.html  index.html
docs/kmagick/com.cherryleafroad.kmagick/-comparison/: -comparison.html  diff-image.html  distortion.html  index.html
docs/kmagick/com.cherryleafroad.kmagick/-composite-operator/: id.html  index.html
docs/kmagick/com.cherryleafroad.kmagick/-compression-type/: id.html  index.html
docs/kmagick/com.cherryleafroad.kmagick/-decoration-type/: id.html  index.html
docs/kmagick/com.cherryleafroad.kmagick/-direction-type/: id.html  index.html
docs/kmagick/com.cherryleafroad.kmagick/-dispose-type/: id.html  index.html
docs/kmagick/com.cherryleafroad.kmagick/-dither-method/: id.html  index.html
docs/kmagick/com.cherryleafroad.kmagick/-drawing-wand/: -drawing-wand.html  border-color.html  clear-exception.html  clear.html  clip-path.html  clip-rule.html  clip-units.html  clone.html  close.html  destroy.html  draw-annotation.html  fill-color.html  fill-opacity.html  fill-rule.html  font-family.html  font-size.html  font-stretch.html  font-style.html  font-weight.html  font.html  get-exception-type.html  get-exception.html  gravity.html  id.html  index.html  is-initialized.html  is-wand.html  opacity.html  stroke-antialias.html  stroke-color.html  stroke-dash-offset.html  stroke-line-cap.html  stroke-line-join.html  stroke-miter-limit.html  stroke-opacity.html  stroke-width.html  text-alignment.html  text-antialias.html  text-decoration.html  text-direction.html  (+6 more)
docs/kmagick/com.cherryleafroad.kmagick/-drawing-wand-exception/: -drawing-wand-exception.html  index.html
docs/kmagick/com.cherryleafroad.kmagick/-endian-type/: id.html  index.html
docs/kmagick/com.cherryleafroad.kmagick/-evaluate-operator/: index.html
docs/kmagick/com.cherryleafroad.kmagick/-exception-type/: id.html  index.html
docs/kmagick/com.cherryleafroad.kmagick/-fill-rule/: id.html  index.html
docs/kmagick/com.cherryleafroad.kmagick/-filter-type/: id.html  index.html
docs/scripts/: pages.json  sourceset_dependencies.js
example/: build.gradle.kts
example/android-setup/app/: README.md  build.gradle
jni-macros/: Cargo.toml
jni-macros/src/: lib.rs  utils.rs
jni-tools/: Cargo.toml
jni-tools/src/: lib.rs  macros.rs
kmagick/: Cargo.toml  build.gradle.kts
kmagick/src/: env.rs  lib.rs  macros.rs  magick_wand.rs  test.rs  utils.rs
proc-jni/: Cargo.toml
proc-jni/src/: lib.rs  utils.rs
rust/: Cargo.toml  Readme.md  build-android.ps1  build-win.ps1  rust-toolchain.toml
rust/jni-macros/: Cargo.toml
rust/jni-macros/src/: jmethod.rs  lib.rs  utils.rs
rust/jni-macros/src/jclass/: impl_generator.rs  jclass.rs  mod.rs
rust/jni-macros/src/parser/attr_parser/: attr_parser.rs  attr_processor.rs  attr_verifier.rs
rust/jni-macros/src/parser/fn_parser/: fn_parser.rs  mod.rs  parsed_fn.rs  return_parser.rs  validate_args.rs
rust/jni-proc-macros/: Cargo.toml
rust/jni-proc-macros/src/: jmethod.rs  lib.rs  macros.rs  utils.rs
rust/jni-tools/: Cargo.toml
rust/jni-tools/src/: lib.rs  macros.rs
rust/kmagick/: Cargo.toml  build.rs
rust/kmagick/src/: cache.rs  drawing_wand.rs  errors.rs  globals.rs  lib.rs  macros.rs  magick_wand.rs  pixel_wand.rs  utils.rs
rust/magick-bindings/: Cargo.toml
rust/magick-bindings/src/: lib.rs  parser.rs  utils.rs
src/: cacher.rs  drawing_wand.rs  env.rs  lib.rs  macros.rs  utils.rs
(+825 files in other folders)
