[package]
name = "jni-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0.8", features=["full"] }
proc-macro2 = "1.0.29"
quote = "1.0.9"
rand = "0.8.4"
