[package]
name = "kmagick-rs"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name ="kmagick"
crate-type = ["cdylib"]

[build-dependencies]
winres = "0.1.12"

# windows only metadata
[package.metadata.winres]
ProductName = "KMagick"
OriginalFilename = "KMAGICK.DLL"
FileDescription = "Kotlin ImageMagick bindings"
InternalName = "kmagick"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
simplelog = "0.11.2"

# disable hdri feature does not disable hdri. it only fixes a compile bug that happens
# when hdri is disabled
[dependencies]
jni = "0.19.0"
log = "0.4.14"
magick_rust = { version = "0.15.0", features = ["disable-hdri"] }
jni-tools = { path = "../jni-tools" }
paste = "1.0.6"
cfg-if = "1.0.0"
thiserror = "1.0.30"
bytemuck = "1.8.0"
lazy_static = "1.4.0"
fxhash = "0.2.1"
enumn = "0.1.3"
