[package]
name = "kmagick-rs"
version = "0.2.1"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name ="kmagick"
crate-type = ["cdylib"]

[build-dependencies]
winres = "0.1.12"

# windows only metadata
[package.metadata.winres]
ProductName = "KMagick"
OriginalFilename = "KMAGICK.DLL"
FileDescription = "Kotlin ImageMagick bindings"
InternalName = "kmagick"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
simplelog = "0.12.0"

# disable hdri feature does not disable hdri. it only fixes a compile bug that happens
# when hdri is disabled
[dependencies]
jni = "0.19.0"
log = "0.4.17"
magick_rust = { version = "0.16.0", features = ["disable-hdri"] }
jni-tools = { path = "../jni-tools" }
paste = "1.0.7"
cfg-if = "1.0.0"
thiserror = "1.0.31"
bytemuck = "1.9.1"
lazy_static = "1.4.0"
fxhash = "0.2.1"
enumn = "0.1.4"
